[tool.poetry]
name = "load_test"
version = "0.1.0"
description = ""
authors = ["Johanderson <johander1822@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.5"
cchardet = "^2.1"
aiodns = "^2.0"
pandas = "^0.24.2"
matplotlib = "^3.1"

[tool.poetry.dev-dependencies]
pytest = "^4.5"
pytest-asyncio = "^0.10.0"
pytest-flake8 = "^1.0"
python-coveralls = "^2.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
